# rk2-timp

./: .gitmodules  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md
.github/workflows/: build.yml
_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  demo
examples/: main.cpp
sources/: singleton.cpp
tests/: test1.cpp  test2.cpp  test3.cpp
